# examples-excels

./: .gitignore  README.md
PowerQuery_Diff_Template/: package.json
PowerQuery_Diff_Template/.agents/skills/: README.md
PowerQuery_Diff_Template/.agents/skills/mac-cron-setup/: SKILL.md
PowerQuery_Diff_Template/tests/: README.md  skills-exec.test.mjs  skills-harness.test.mjs  skills-loader.test.mjs
PowerQuery_Diff_Template/tests/helpers/: exec.mjs  expectations.mjs  harness.mjs  skills.mjs
PowerQuery_Diff_Template/v1/: CompareMonths_all.query  CompareMonths_changes_load_tables.query  CompareMonths_changes_only.query  CompareMonths_changes_only_with_name.query  data_sample_001.xlsx  data_sample_001_with_query.xlsx
PowerQuery_Diff_Template/v1/automated/CompareMonths_changes_only_with_name/: README.md  REQ.md  plan.md  pyproject.toml
PowerQuery_Diff_Template/v1/automated/CompareMonths_changes_only_with_name/src/xldiff/: __init__.py  reader.py
PowerQuery_Diff_Template/v1/automated/CompareMonths_changes_only_with_name/tests/: test_cli.py  test_diff.py  test_reader.py
PowerQuery_Diff_Template/v1/automated/py_xldiff_compare_months_changes/: .gitignore  Makefile  README.md  REQ.md  pyproject.toml
PowerQuery_Diff_Template/v1/automated/py_xldiff_compare_months_changes/scripts/: make_sample.py
PowerQuery_Diff_Template/v1/automated/py_xldiff_compare_months_changes/src/py_xldiff_compare_months_changes/: cli.py  diff.py  writer.py
PowerQuery_Diff_Template/v1/automated/py_xldiff_compare_months_changes/tests/: conftest.py  test_cli.py  test_diff.py  test_reader.py
(+55 files in other folders)
