[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xldiff"
version = "1.0.0"
description = "Compare monthly tables in an Excel workbook and emit only the rows that changed."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["openpyxl>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
xldiff = "xldiff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
